simplest docker file for springboot ever